# Map-Reduce

./: .gitignore  .gitmodules  CMakeLists.txt  MapReduce.cpp  MapReduce.h  build.sh  config.sh  main.cpp  mapReduce  mapReduce.cpp  run.sh  testArg  testArg.cpp
data/: f1.txt  f2.txt  f3.txt
intermediary/P0/: "A.txt  "How.txt  "I.txt  "If.txt  "It.txt  "That.txt  "The.txt  "What.txt  "Why.txt  "You.txt  "and.txt  "that.txt  "the.txt  "to.txt  (1).txt  (a.txt  (and.txt  (as.txt  (consequently.txt  (for.txt  (in.txt  (not.txt  (that.txt  (the.txt  (to.txt  (which.txt  (who.txt  (with.txt  (without.txt  -.txt  ..txt  .txt  0.txt  1..txt  1.txt  10.txt  11..txt  14.txt  2..txt  2.txt  (+2828 more)
intermediary/P1/: ".txt  "A.txt  "All.txt  "And.txt  "Are.txt  "But.txt  "Can.txt  "Come.txt  "Did.txt  "Do.txt  "Don't.txt  "For.txt  "Good.txt  "Have.txt  "He's.txt  "He.txt  "How.txt  "I'm.txt  "I've.txt  "I.txt  "If.txt  "Is.txt  "It's.txt  "It.txt  "Just.txt  "Let.txt  "Maybe.txt  "My.txt  "No,".txt  "No,.txt  "No.".txt  "Not.txt  "Now.txt  "Of.txt  "Oh,.txt  "Right.txt  "She's.txt  "She.txt  "So,.txt  (+3421 more)
result/: "A.txt  "About.txt  "After.txt  "Ah,".txt  "Ah,.txt  "Alas!.txt  "All.txt  "An.txt  "And.txt  "Any.txt  "Anything.txt  "Anyway,.txt  "Aren't.txt  "As.txt  "Be.txt  "Before.txt  "Better.txt  "But,.txt  "But.txt  "Call.txt  "Can.txt  "Come.txt  "Cut.txt  "Damn.txt  "Dead.txt  "Dear.txt  "Denham's.txt  "Did.txt  "Do.txt  "Does.txt  "Doesn't.txt  "Especially.txt  "Even.txt  "Everyone.txt  "Exactly..txt  "Fair.txt  "Fear.txt  "First.txt  "For.txt  "Give.txt  (+8065 more)
testFolder/: main  main.cpp
(+12645 files in other folders)
